2008-10-09  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	Bug 550342 – Splash screens have a caption

	* gdk/quartz/gdkwindow-quartz.c: (_gdk_window_new),
	(gdk_window_set_decorations): Patch from Marianne Gagnon to make
	splash windows borderless.

2008-10-09  Simos Xenitellis  <simos@gnome.org>

	Bug 554192 – double press on the "circumflex" dead key
	(standard french 105 keyboard) no longer produces the "^" character

	* gtk/gtkimcontextsimple.c (gtk_im_context_simple_filter_keypress):
	Changed the order, put  check_compact_table() first, then
	check_algorithmically().	

2008-10-08  Christian Persch  <chpe@gnome.org>

        Bug 554702 – gtkfilesystem leaks GError

        * gtk/gtkfilesystem.c (_gtk_file_system_init): Free the GError.

2008-10-08  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkfilechooserdefault.c (update_current_folder_get_info_cb):
	Don't forget to reset reload_state when current_folder is already
	correct. Fixes https://bugzilla.redhat.com/show_bug.cgi?id=465992

2008-10-06  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtktooltip.c (gtk_tooltip_show_tooltip): Avoid unitialized
	memory warnings from valgrind.

2008-10-06  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkprintunixdialog.c (create_main_page): Show the tooltip
	on the range entry itself, too.

2008-10-04  Tor Lillqvist  <tml@novell.com>

	Bug 132501 - Make utility window translate to tool window in win32

	Implement the utility window type hint. Such windows are kept on
	top of other windows of the same process. Makes GIMP's toolbox and
	dock windows behave more like in GNOME under metacity. Apply the
	same logic also to windows marked with the dialog window type
	hint, and windows that are transient for some other window. I'll
	call such windows "transient-type" below.

	* gdk/win32/gdkevents-win32.c (doesnt_want_key): Drop unused
	variables.

	(ensure_stacking_on_unminimize)