@@ -1,3 +1,13 @@
+2008-10-10  Simos Xenitellis  <simos@gnome.org>
+
+	Merged from trunk:
+
+	Bug 555000 – Wrong treatment on non-spacing marks dead keys in
+	GtkIMContextSimple
+
+	* gtk/gtkimcontextsimple.c: Change IS_DEY() macro so that
+	it on checksf input is a deadkey 
+
 2008-10-09  Richard Hult  <richard@imendio.com>
 
 	Merged from trunk:
